# PrintMaster

./: CMakeLists.txt  configFile.json
Front_End/: index.html  script.js
Front_End/ADD&SEARCH/: clients.html  script.js  style.css
Front_End/clientPrinterCartridgeRepairing/: clientPrinterCartridgeRepairing.html  script.js  style.css
Front_End/createOrders/: createOrdersForDays.html  script.js  style.css
Front_End/seeOrders/: script.js  seeOrdersForDays.html  style.css
implement/: dataBase.cpp  dataBase.hpp  engineStarter.cpp  engineStarter.hpp  evantSwitch.cpp  evantSwitch.hpp  helperFunctions.cpp  helperFunctions.hpp  main.cpp
implement/brands/: brandsEvants.cpp  brandsEvants.hpp  brandsTable.cpp  brandsTable.hpp
implement/cartridges/: cartridgesEvants.cpp  cartridgesEvants.hpp  cartridgesTable.cpp  cartridgesTable.hpp
implement/chips/: chipsEvants.cpp  chipsEvants.hpp  chipsTable.cpp  chipsTable.hpp
implement/client_printer/: client_printerEvants.cpp  client_printerEvants.hpp  client_printerTable.cpp  client_printerTable.hpp
implement/client_printer_cartridges/: client_printer_cartridgesEvants.cpp  client_printer_cartridgesEvants.hpp  client_printer_cartridgesTable.cpp  client_printer_cartridgesTable.hpp
implement/clients/: clientsEvants.cpp  clientsEvants.hpp  clientsTable.cpp  clientsTable.hpp
implement/clients_addresses/: clients_addressesEvants.cpp  clients_addressesEvants.hpp  clients_addressesTable.cpp  clients_addressesTable.hpp
implement/clients_phone_numbers/: clients_phone_numbersEvants.cpp  clients_phone_numbersEvants.hpp  clients_phone_numbersTable.cpp  clients_phone_numbersTable.hpp
(+40 files in other folders)
